# oop-labs-2025

./: .gitignore
lab-01/: CMakeLists.txt  README.md
lab-01/include/: box.h
lab-01/src/: box.cpp  main.cpp
lab-01/tests/: test_box.cpp
lab-02/: CMakeLists.txt  Money.cpp  Money.h  README.md  main.cpp
lab-02/include/: Money.h
lab-02/src/: Money.cpp  main.cpp
lab-02/tests/: CMakeLists.txt  money_test.cpp
lab-03/: CMakeLists.txt  README.md
lab-03/include/: ArrayFigures.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h  Util.h
lab-03/src/: ArrayFigures.cpp  Figure.cpp  Point.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
lab-03/test/: CMakeLists.txt  test_area.cpp
lab-04/: CMakeLists.txt
lab-04/include/: array.h  figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h
lab-04/src/: main.cpp
lab-05/: CMakeLists.txt
lab-05/src/: main.cpp  pmr_memory.hpp  pmr_singly_list.hpp
lab-05/tests/: test_basic.cpp
lab-06/: CMakeLists.txt
lab-06/src/: CMakeLists.txt  Dungeon.cpp  Dungeon.hpp  Factories.cpp  Factories.hpp  NPC.cpp  NPC.hpp  Observer.cpp  Observer.hpp  Visitor.cpp  Visitor.hpp  main.cpp
lab-06/tests/: CMakeLists.txt  test_battle.cpp  test_factory.cpp
lab-07/: CMakeLists.txt  README.md  TESTING.md
lab-07/include/: Dungeon.hpp  Factories.hpp  NPC.hpp  Visitor.hpp
lab-07/src/: CMakeLists.txt  Dungeon.cpp  Factories.cpp  NPC.cpp  Visitor.cpp  main.cpp
